# pathfinder

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .yarnrc.yml  README-podman-quadlets.md  README.md  docker-compose.e2e.yml  docker-compose.yml  ollama_models.yaml.example  package.json  pyrightconfig.json  sonar-project.properties
apps/api/: .env.example  Dockerfile  README.md  alembic.ini  config.toml  pyproject.toml  vulture_whitelist.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 6986444486d4_initial_schema_baseline.py  a3f1b2c4d5e6_add_gene_set_link_to_projections.py  b4e2f3a5d6c7_add_dismissed_at_to_projections.py  c5d6e7f8a9b0_rename_result_count_to_estimated_size.py  d6e7f8a9b0c1_add_user_fk_to_experiments_gene_sets.py
apps/api/docs/: conf.py  index.rst
apps/api/docs/_static/: custom.css
apps/api/docs/api/: agents.rst  ai.rst  ai_functions.rst  chat.rst  delegation.rst  domain.rst  engines.rst  experiments.rst  gene_sets.rst  index.rst  integrations.rst  overview.rst  persistence.rst  platform.rst  research.rst  services.rst  strategies.rst  subkani.rst  tools.rst  transport.rst  vectorstore.rst  wdk_services.rst
apps/api/scripts/: audit_cassettes.py  check_openapi_yaml.py  codegen_models.py  fix_docstrings.py  generate_openapi_yaml.py  ingest_public_strategies_to_qdrant.py  ingest_wdk_catalog_to_qdrant.py  migrate_conversations_to_strategies.py  scrub_cassettes.py  smoke_rag_vs_live.py  trim_cassettes.py  warm_cache.py  wipe_wdk_account.py
apps/api/src/veupath_chatbot/: __init__.py  main.py
apps/api/src/veupath_chatbot/ai/: __init__.py  agent_factory.py  agent_runtime.py  delegation_plan.py  graph_metadata.py  model_catalog.py  planner_prompt.py  planner_runtime.py  prompts.py  strategy_session_factory.py  subkani_utils.py  subtask_agent.py  subtask_scheduler.py  system_prompt.py
apps/api/src/veupath_chatbot/ai/agents/: __init__.py  engine_factory.py  executor.py  experiment.py  factory.py  planner.py  subtask.py  workbench.py
apps/api/src/veupath_chatbot/ai/engines/: cached_anthropic.py  mock.py  responses_openai.py
apps/api/src/veupath_chatbot/ai/models/: __init__.py  catalog.py  pricing.py
apps/api/src/veupath_chatbot/ai/orchestration/: __init__.py  delegation.py  results.py  scheduler.py  types.py
apps/api/src/veupath_chatbot/ai/prompts/: __init__.py  executor_prompt.py  loader.py  planner.md  planner_prompt.py  safety.md  site_hints.md  subtask.md  system.md
apps/api/src/veupath_chatbot/ai/stubs/: kani.pyi
apps/api/src/veupath_chatbot/ai/subkani/: __init__.py  orchestrator.py  prompts.py
apps/api/src/veupath_chatbot/ai/tools/: __init__.py  catalog_rag_tools.py  catalog_registry.py  catalog_tools.py  combined_result.py  conversation_tools.py  example_plans_rag_tools.py  execution_tools.py  export_tools.py  planner_registry.py  query_validation.py  registry.py  research_registry.py  research_tools.py  result_tools.py  strategy_registry.py  unified_registry.py  wdk_error_handler.py  workbench_read_tools.py
apps/api/src/veupath_chatbot/devtools/: openapi.py
apps/api/src/veupath_chatbot/domain/: __init__.py  search.py
apps/api/src/veupath_chatbot/domain/parameters/: __init__.py  _decode_values.py  _value_helpers.py  canonicalize.py  normalize.py  specs.py  validation.py  vocab_utils.py
apps/api/src/veupath_chatbot/domain/research/: __init__.py  citations.py  papers.py
apps/api/src/veupath_chatbot/domain/strategy/: __init__.py  ast.py  ast_utils.py  compile.py  explain.py  metadata.py  ops.py  organism.py  plan_ast.py  session.py  tree.py  validate.py
apps/api/src/veupath_chatbot/integrations/embeddings/: openai_embeddings.py
apps/api/src/veupath_chatbot/integrations/vectorstore/: __init__.py  bootstrap.py  dependent_vocab_cache.py  qdrant_store.py
apps/api/src/veupath_chatbot/integrations/veupathdb/: __init__.py  client.py  discovery.py  factory.py  param_utils.py  site_router.py  site_search.py  site_search_client.py  sites.yaml  strategy_api.py  temporary_results.py  wdk_models.py  wdk_parameters.py
apps/api/src/veupath_chatbot/jobs/: __init__.py  rag_startup.py
apps/api/src/veupath_chatbot/persistence/: models.py  repo.py  session.py
apps/api/src/veupath_chatbot/persistence/repositories/: __init__.py  control_set.py  strategy.py  stream.py  user.py
apps/api/src/veupath_chatbot/platform/: config.py  context.py  errors.py  event_schemas.py  events.py  health.py  json_helpers.py  logging.py  parsing.py  pydantic_base.py  pydantic_validation.py  redis.py  security.py  store.py  text.py  tool_errors.py  types.py
apps/api/src/veupath_chatbot/services/: __init__.py  catalog.py  control_helpers.py  control_tests.py  eval.py  gene_lookup.py  parameter_optimization.py  search_rerank.py  strategy_session.py  tool_policy.py  user_data.py
apps/api/src/veupath_chatbot/services/catalog/: __init__.py  models.py  param_discovery.py  param_formatting.py  param_resolution.py  param_validation.py  parameters.py  public_strategy_search.py  rag_search.py  searches.py  sites.py  vocab_rendering.py
apps/api/src/veupath_chatbot/services/chat/: __init__.py  bootstrap.py  event_handlers.py  events.py  finalization.py  mention_context.py  message_builder.py  orchestrator.py  plan_processor.py  processor.py  sse.py  streaming.py  thinking.py  types.py  utils.py
apps/api/src/veupath_chatbot/services/embeddings/: openai_embeddings.py
apps/api/src/veupath_chatbot/services/enrichment/: __init__.py  compare.py  custom.py  parser.py  service.py  stats.py  types.py
apps/api/src/veupath_chatbot/services/experiment/: __init__.py  _deserialize.py  ai_analysis_helpers.py  ai_analysis_tools.py  ai_refinement_tools.py  assistant.py  classification.py  cross_validation.py  custom_enrichment.py  (+24 more)
apps/api/src/veupath_chatbot/tests/: RECORDING.md  __init__.py  conftest.py
apps/api/src/veupath_chatbot/transport/: __init__.py
apps/api/stubs/kani/: __init__.pyi  internal.pyi  kani.pyi  models.pyi
apps/api/stubs/kani/engines/: __init__.pyi  anthropic.pyi  base.pyi  openai.pyi
(+1488 files in other folders)
