[project]
name = "pathfinder-api"
version = "1.0.0"
description = "VEuPathDB Strategy Builder Chatbot API"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "httpx>=0.28.0",
    "kani[openai,anthropic,google]>=1.2.0",
    "qdrant-client>=1.12.0",
    "python-multipart>=0.0.16",
    "structlog>=24.4.0",
    "pyyaml>=6.0.2",
    "tenacity>=9.0.0",
    "sse-starlette>=2.1.0",
    "json5>=0.9.0",
    "rapidfuzz>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "respx>=0.21.0",
    "pre-commit>=3.7.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-pyyaml>=6.0.0",
    "vulture>=2.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/veupath_chatbot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/veupath_chatbot/tests"]

[tool.coverage.run]
source = ["src/veupath_chatbot"]
omit = ["*/tests/*"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = [
    # FastAPI path params and Pydantic field names intentionally use mixedCase
    # to match the public HTTP contract (e.g. `siteId`, `planSessionId`).
    # Long prompt/template strings intentionally exceed line-length.
    "E501",
    "N803",
    "N815",
]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_ignores = true
disable_error_code = ["import-untyped", "untyped-decorator"]

[dependency-groups]
dev = [
    "testcontainers",
]

