[project]
name = "pathfinder-api"
version = "0.1.0a1"
description = "VEuPathDB Strategy Builder Chatbot API"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "httpx>=0.28.0",
    "kani[openai,anthropic,google]>=1.2.0",
    "qdrant-client>=1.12.0",
    "python-multipart>=0.0.16",
    "structlog>=24.4.0",
    "pyyaml>=6.0.2",
    "tenacity>=9.0.0",
    "json5>=0.9.0",
    "rapidfuzz>=3.9.0",
    "optuna>=4.0.0",
    "redis[hiredis]>=5.2.0",
    "pyjwt>=2.9.0",
    "slowapi>=0.1.9",
    "pathfinder-shared",
    "furo[dev]>=2025.12.19",
    "sphinx-design[dev]>=0.7.0",
    "sphinx-copybutton[dev]>=0.5.2",
    "sphinxcontrib-mermaid[dev]>=2.0.1",
    "sphinx-inline-tabs[dev]>=2025.12.21.14",
    "sphinx[dev]>=8",
]

[tool.uv.sources]
pathfinder-shared = { path = "../../packages/shared-py", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "respx>=0.21.0",
    "pre-commit>=3.7.0",
    "ruff>=0.7.0",
    "mypy>=1.19.0",
    "types-pyyaml>=6.0.0",
    "vulture>=2.10",
    "sphinx>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/veupath_chatbot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/veupath_chatbot/tests"]
markers = [
    "live_wdk: tests that make live HTTP calls to VEuPathDB WDK endpoints (require network)",
]

[tool.coverage.run]
source = ["src/veupath_chatbot"]
omit = ["*/tests/*"]

[tool.ruff]
line-length = 88
target-version = "py314"
src = ["src", "alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = [
    # FastAPI path params and Pydantic field names intentionally use mixedCase
    # to match the public HTTP contract (e.g. `siteId`, `planSessionId`).
    # Long prompt/template strings intentionally exceed line-length.
    "E501",
    "N803",
    "N815",
    # Pydantic models with self-referential fields need quoted forward refs
    # even on Python 3.14 (PEP 649) because Pydantic's metaclass evaluates
    # annotations eagerly at class construction time.
    "UP037",
]

[tool.ruff.lint.isort]
known-first-party = ["veupath_chatbot"]

[tool.mypy]
python_version = "3.14"
strict = true
mypy_path = "stubs"
warn_return_any = true
warn_unused_ignores = true
disable_error_code = ["import-untyped", "untyped-decorator"]
exclude = ["scripts/", "docs/", "src/veupath_chatbot/tests/"]

[[tool.mypy.overrides]]
module = "veupath_chatbot.tests.*"
disable_error_code = [
    "no-untyped-def",
    "arg-type",
    "assignment",
    "return-value",
    "type-arg",
    "var-annotated",
]

[tool.vulture]
paths = ["src/veupath_chatbot"]
exclude = ["tests/", "*/conftest.py"]
min_confidence = 80

[dependency-groups]
dev = [
    "fakeredis>=2.34.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
    "ruff>=0.15.0",
    "testcontainers",
]


[tool.pyright]
pythonVersion = "3.14"
pythonPlatform = "Linux"

